# sarif-to-md-rs

./: .markdownlint.json  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  dependency-policy.yml  lint.yml  publish.yml  release.yml  security.yml  test.yml
crates/core/src/: lib.rs
crates/core/src/markdown/: common_mark_generator.rs  gfm_generator.rs  mod.rs
crates/core/src/markdown/generator/json/common_mark/: mod.rs
crates/core/src/markdown/generator/sarif/: common_mark.rs  converter.rs  gfm.rs  mod.rs  types.rs
crates/core/src/model/: security_report.rs
crates/core/src/parser/: mod.rs
crates/core/src/parser/container/: container_parser.rs
crates/core/src/parser/json/: mod.rs
crates/core/src/parser/json/container/: mod.rs
crates/core/src/parser/sarif/: mod.rs
crates/core/templates/: base.md  macros.md  report.md  vulnerability.md
crates/core/templates/json/: macros.md  vulnerability.md
crates/core/templates/sarif/: report.md  sarif_macros.md  sarif_report.md  sarif_result.md
crates/sarif-to-md/: Cargo.toml  README.md
crates/sarif-to-md-core/: Cargo.toml  README.md
crates/sarif-to-md-core/src/: error.rs  generators.rs  lib.rs
crates/sarif-to-md-core/src/markdown/: mod.rs
crates/sarif-to-md-core/src/markdown/sarif/: generator.rs
crates/sarif-to-md-core/src/snapshots/: sarif_to_md_core__tests__public_api.snap
crates/sarif-to-md-core/templates/sarif/: macros.md  report.md  result.md
crates/sarif-to-md-core/tests/: common.rs  lib_tests.rs  public_api_tests.rs
crates/sarif-to-md/benches/: benchmarks.rs
crates/sarif-to-md/src/: cli.rs  main.rs
crates/serde_snyk_container/: build.rs
crates/serde_snyk_container/src/: lib.rs
crates/snyk-to-md/src/: cli.rs  main.rs
examples/: README.md
examples/expected-outputs/common-mark/: 01-minimal.md  02-rule-metadata.md  03-suppressions.md  04-code-flows.md  05-context-region.md  06-baseline.md  07-result-stacks.md  08-embedded-content.md  09-uri-base-ids.md  10-default-config.md
examples/expected-outputs/github-flavored/: 01-minimal.md  02-rule-metadata.md  03-suppressions.md  04-code-flows.md  05-context-region.md  06-baseline.md  07-result-stacks.md  08-embedded-content.md  09-uri-base-ids.md  10-default-config.md
tests/: integration_tests.rs  performance.rs
tests/common/: mod.rs
