[package]
name = "sarif-to-md-core"
version = "1.0.3"
edition = "2021"
authors = ["Nelson Silva <nelson.emanuel.silva@gmail.com>"]
description = "Core library for converting SARIF security reports to Markdown."
license = "MIT OR Apache-2.0"
repository = "https://github.com/fulgas/sarif-to-md-rs"
homepage = "https://github.com/fulgas/sarif-to-md-rs"
keywords = ["sarif", "security", "vulnerability", "markdown", "reporting"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.90"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sarif_to_md_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive", "default"] }
serde_json = "1.0.145"
serde-sarif = {  version = "0.8.0", features = ["anyhow"] }
askama = { version = "0.14.0"}
chrono = "0.4.42"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "=3.24.0"
rstest = "=0.26.1"
anyhow = "=1.0.102"
rustup-toolchain = "=0.1.10"
rustdoc-json = "=0.9.8"
public-api = "=0.50.3"
insta = "=1.46.3"