[package]
name = "sarif-to-md"
version = "1.0.3"
edition = "2021"
authors = ["Nelson Silva <nelson.emanuel.silva@gmail.com>"]
description = "A CLI to convert SARIF security reports into Markdown format."
license = "MIT OR Apache-2.0"
repository = "https://github.com/fulgas/sarif-to-md-rs"
keywords = ["sarif", "markdown", "vulnerability", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.90"

[package.metadata.docs.rs]
targets = []

[[bin]]
name = "sarif-to-md"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
sarif-to-md-core = { version = "1.0.3", path = "../sarif-to-md-core" }

[dev-dependencies]
assert_cmd = "=2.1.2"
predicates = "=3.1.3"
tempfile = "=3.24.0"
rstest = "=0.26.1"
anyhow = "=1.0.101"
regex = "=1.12.2"
criterion = { version = "=0.8.2", features = ["html_reports"] }
